--- a/tp-anual/pom.xml
+++ b/tp-anual/pom.xml
@@ -43,5 +43,15 @@
 
     <version>1.0.0</version>
 	</dependency>
+	<dependency>
+	<groupId>org.mockito</groupId>
+	<artifactId>mockito-all</artifactId>
+	<version>1.9.5</version>
+	</dependency>
+	<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.6.2</version>
+	</dependency>
   </dependencies>
 </project>
