--- a/tp-anual/pom.xml
+++ b/tp-anual/pom.xml
@@ -70,5 +70,10 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.7.4</version>
 	</dependency>
+	<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.4</version>
+	</dependency>
   </dependencies>
 </project>
