--- a/tp-anual/pom.xml
+++ b/tp-anual/pom.xml
@@ -29,6 +29,25 @@
   </properties>
 
   <dependencies>
+  <!-- JPA Persistence Dependencies -->
+		<dependency>
+			<groupId>org.uqbar-project</groupId>
+			<artifactId>jpa-java8-extras</artifactId>
+			<version>1.0-alpha-1</version>
+		</dependency>
+
+		<!-- driver jdbc -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.26</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.2.8</version>
+		</dependency>
+		
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -76,4 +95,5 @@
     <version>2.4</version>
 	</dependency>
   </dependencies>
+  
 </project>
