--- a/tp-anual/pom.xml
+++ b/tp-anual/pom.xml
@@ -90,9 +90,29 @@
 			<version>2.7.4</version>
 	</dependency>
 	<dependency>
+              <groupId>org.mongodb.morphia</groupId>
+              <artifactId>morphia</artifactId>
+              <version>1.2.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>redis.clients</groupId>
+    	<artifactId>jedis</artifactId>
+    	<version>2.9.0</version>
+    </dependency>
+	<dependency>
     <groupId>commons-io</groupId>
     <artifactId>commons-io</artifactId>
     <version>2.4</version>
+	</dependency>
+	<dependency>
+   <groupId>org.redisson</groupId>
+   <artifactId>redisson</artifactId>
+   <version>2.3.0</version>
+</dependency>
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.7</version>
 	</dependency>
   </dependencies>
   
