--- a/tp-anual/pom.xml
+++ b/tp-anual/pom.xml
@@ -114,6 +114,23 @@
 	    <artifactId>gson</artifactId>
 	    <version>2.7</version>
 	</dependency>
+	<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-core</artifactId>
+			<version>2.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-template-handlebars</artifactId>
+			<version>2.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-debug-tools</artifactId>
+			<version>0.5</version>
+		</dependency>
   </dependencies>
   
 </project>
